tests/pos/i6227.scala
class C {
  opaque type T = Int
}