tests/neg/clashes.scala
object Test {
  class C
  type C
}

object Test
